# fallacious-rooster

./: Makefile  README.md
.github/workflows/: release.yml  test.yml
frontend/: .gitignore  README.md  eslint.config.js  index.html  package.json  pubspec.yaml  tsconfig.json  vite.config.ts
frontend/lib/: authorization.dart  main.dart
frontend/lib/dio/: dio_adapter_mobile.dart  dio_adapter_web.dart
frontend/lib/l10n/: intl_en.arb  intl_nl.arb
frontend/src/: main.ts
frontend/src/layouts/: Authorized.vue  AuthorizedAdmin.vue  AuthorizedAdminMiddleware.vue  AuthorizedMiddleware.vue  Default.vue  UnauthorizedMiddleware.vue  authorized.ts
frontend/src/plugins/: i18n.ts  index.ts  vuetify.ts
frontend/src/router/: index.ts
frontend/src/scripts/: config.ts  error.ts  fetch1.ts  oauth2.ts  report.ts  (+1 more)
frontend/web/: index.html  manifest.json
server/: .gitignore  Cargo.toml  config.json  sample_config.json  storage.json
server/src/: args.rs  main.rs
server/src/email/: mod.rs  template.rs
server/src/email/templates/: report_board.hbs  report_confidential_advisors.hbs
server/src/file/: config.rs  mod.rs  storage.rs
server/src/server/: mod.rs
server/src/server/routes/: mod.rs  report.rs
server/src/server/routes/config/: mod.rs
server/src/server/routes/config/board/: get.rs  mod.rs  update.rs
server/src/server/routes/config/confidential_advisors/: add.rs  list.rs  mod.rs  remove.rs
server/src/server/routes/oauth/: callback.rs  login.rs  mod.rs  ok.rs
server/src/server/types/: authorization.rs  data.rs  error.rs  mod.rs  redirect.rs  set_cookie.rs
(+16 files in other folders)
