[package]
name = "fallacious-rooster"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.8.0"
cabbage = "0.1.3"
color-eyre = "0.6.3"
handlebars = "6.0.0"
lettre = { version = "0.11.7", default-features = false, features = ["smtp-transport", "builder", "tokio1-rustls-tls"] }
noiseless-tracing-actix-web = "0.1.0"
rand = "0.8.5"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
thiserror = "1.0.63"
time = "0.3.36"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-actix-web = "0.7.11"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4.5.14", features = ["derive"] }
actix-route-config = "0.1.1"
